errorlogs/1516586212785-py2teeest.py.txt
err:winediag:SECUR32_initNTLMSP ntlm_auth was not found or is outdated. Make sure that ntlm_auth >= 3.0.25 is in your path. Usually, you can find it in the winbind package of your distribution.
155 INFO: PyInstaller: 3.3.1
155 INFO: Python: 3.4.4
156 INFO: Platform: Windows-XP-5.1.2600-SP3
161 INFO: wrote Z:\p2e\py2teeest.spec
167 INFO: UPX is not available.
168 INFO: Removing temporary files and cleaning cache in C:\users\root\Application Data\pyinstaller
183 INFO: Extending PYTHONPATH with paths
['Z:\\p2e\\workingdir\\1516586212785', 'Z:\\p2e']
184 INFO: checking Analysis
184 INFO: Building Analysis because out00-Analysis.toc is non existent
185 INFO: Initializing module dependency graph...
194 INFO: Initializing module graph hooks...
198 INFO: Analyzing base_library.zip ...
6845 INFO: Processing pre-find module path hook   distutils
10462 INFO: running Analysis out00-Analysis.toc
11000 INFO: Caching module hooks...
11014 INFO: Analyzing Z:\p2e\workingdir\1516586212785\py2teeest.py

Syntax error in Z:\p2e\workingdir\1516586212785\py2teeest.py
  File "Z:\p2e\workingdir\1516586212785\py2teeest.py", line 1
     print "bro"
               ^
 SyntaxError: Missing parentheses in call to 'print'

